@@ -172,7 +172,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>cl.vss.cotizador.Main</mainClass>
+                                    <mainClass>cl.vss.cotizador.Launcher</mainClass>
                                     <manifestEntries>
                                         <Application-Name>Cotizador VSS</Application-Name>
                                         <Implementation-Title>Cotizador VSS</Implementation-Title>
@@ -181,8 +181,10 @@
                                         <Bundle-Name>Cotizador VSS</Bundle-Name>
                                         <Bundle-DisplayName>Cotizador VSS</Bundle-DisplayName>
                                         <Bundle-Description>Sistema de Cotizaciones VSS</Bundle-Description>
+                                        <Add-Opens>javafx.graphics/com.sun.javafx.application=ALL-UNNAMED javafx.graphics/com.sun.glass.ui=ALL-UNNAMED</Add-Opens>
                                     </manifestEntries>
                                 </transformer>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                             </transformers>
                             <filters>
                                 <filter>
@@ -194,7 +196,7 @@
                                     </excludes>
                                 </filter>
                             </filters>
-                            <finalName>cotizador-vss</finalName>
+                            <finalName>cotizador-vss-${project.version}</finalName>
                         </configuration>
                     </execution>
                 </executions>
